[gd_scene load_steps=33 format=2]

[ext_resource path="res://Assets/ShipInside/DoorBorder.png" type="Texture" id=1]
[ext_resource path="res://Assets/ShipInside/DoorOpen.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Door/Door.gd" type="Script" id=3]
[ext_resource path="res://Assets/ShipInside/negative.png" type="Texture" id=4]
[ext_resource path="res://Assets/ShipInside/positive.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 156.702, 51.2582 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 1920, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 1728, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 1536, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 1344, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 1152, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 960, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 768, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 576, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 576, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 768, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 960, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 1152, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 1344, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 1536, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 1728, 0, 192, 128 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 1920, 0, 192, 128 )

[sub_resource type="SpriteFrames" id=24]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": false,
"name": "Close",
"speed": 12.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": false,
"name": "Open",
"speed": 10.0
} ]

[sub_resource type="Animation" id=25]
resource_name = "BlueLight"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 1, 1 ), Color( 0, 0.588235, 1, 1 ), Color( 0, 0, 1, 1 ) ]
}

[sub_resource type="Animation" id=26]
resource_name = "PurpleLight"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.607843, 0, 1, 1 ), Color( 1, 0, 1, 1 ), Color( 0.607843, 0, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 58.6049, 54.2531 )

[node name="Door" type="Node2D"]
script = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 524288

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 11.3137 )
shape = SubResource( 1 )

[node name="DoorManipulation" type="AnimatedSprite" parent="."]
frames = SubResource( 24 )
animation = "Close"
frame = 10
playing = true

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 0.607843, 0, 1, 1 )
position = Vector2( -31.9541, 8.40896 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/BlueLight = SubResource( 25 )
anims/PurpleLight = SubResource( 26 )

[node name="States" type="Node2D" parent="."]

[node name="Positive" type="Sprite" parent="States"]
position = Vector2( 74.375, 12.2824 )
scale = Vector2( 0.745768, 0.579752 )
texture = ExtResource( 5 )

[node name="Negative" type="Sprite" parent="States"]
position = Vector2( 74.375, 12.282 )
scale = Vector2( 0.746, 0.58 )
texture = ExtResource( 4 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 2147483650

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -31.1815, 8.90898 )
shape = SubResource( 27 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
